--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@zeit/next-bundle-analyzer": "^0.1.2",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.18.0",
+    "babel-plugin-inline-react-svg": "^1.0.1",
     "bootstrap": "^4.2.1",
     "devour-client": "^2.0.15",
     "dotenv": "^6.2.0",
