--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "graphql": "^14.5.6",
     "graphql-tag": "^2.10.1",
     "hel-icons": "^1.0.0-beta.3",
+    "lodash": "^4.17.15",
     "lru-cache": "^5.1.1",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
