--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cacheable-response": "^1.10.0",
     "cytoscape": "^3.13.0",
     "cytoscape-dagre": "^2.2.2",
+    "cytoscape-klay": "^3.1.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^14.5.6",
