--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "parse-cache-control": "^1.0.1",
     "plotly.js": "^1.52.1",
     "polished": "^3.4.2",
+    "posthtml": "^0.12.0",
+    "posthtml-external-link-target-blank": "^1.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
